2007-10-17  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-search-engine-simple.c:
	Update to use gio

2007-10-17  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-emblem-utils.c: do not use gnome-vfs.

2007-10-17  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-link.[ch]: remove.
	* libnautilus-private/nautilus-link-desktop-file.[ch]: port to gio
	and rename them to nautilus-link.[ch]
	* libnautilus-private/nautilus-file.c: adapt for the above change.

2007-10-17  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-places-sidebar.c:
	Use gio volume APIs

2007-10-17  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-file-private.h:
	Remove has/get_volume/drive, replace with
	can_mount/unmount/eject and mount/unmount/eject.
	(Which are not fully implemented yet)
	Add nautilus_file_is_mountpoint.
	
        * libnautilus-extension/nautilus-file-info.[ch]:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-link-desktop-file.[ch]:
        * libnautilus-private/nautilus-link.[ch]:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-icon-view.c:
        * src/file-manager/fm-properties-window.c:
        * src/file-manager/fm-tree-model.[ch]:
        * src/file-manager/fm-tree-view.c:
	Use gio volume APIs

2007-10-16  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
        * libnautilus-private/nautilus-desktop-link-monitor.c:
        * libnautilus-private/nautilus-desktop-link.[ch]:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-search-directory-file.c:
        * src/file-manager/fm-directory-view.c: