@@ -1,5 +1,10 @@
 2007-10-17  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-location-dialog.c (open_current_location): 
+	Use g_file_parse_name instead of gnome_vfs_make_uri_from_input
+	
+2007-10-17  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-search-engine-simple.c:
 	Update to use gio
 
